--- a/CMS/CMS.Web/appsettings.json
+++ b/CMS/CMS.Web/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Defultconiction": "Server=KHALIDS-DELL;Database=CMS;Trusted_Connection=True;TrustServerCertificate=True;"
+    "Defultconiction": "Data Source=DESKTOP-T10MFH0\\SQLSERVER;Initial Catalog=Hiring;Trusted_Connection=True;Integrated Security=True;"
   }
 }
