--- a/CMS/CMS.Domain/CMS.Domain.csproj
+++ b/CMS/CMS.Domain/CMS.Domain.csproj
@@ -4,6 +4,13 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Compile Remove="Migrations\20230910072511_modifyPositionsAndCandidates.cs" />
+    <Compile Remove="Migrations\20230910072511_modifyPositionsAndCandidates.Designer.cs" />
+    <Compile Remove="Migrations\20230910120421_secondmodifyPositionsAndCandidates.cs" />
+    <Compile Remove="Migrations\20230910120421_secondmodifyPositionsAndCandidates.Designer.cs" />
+  </ItemGroup>
+
 	<ItemGroup>
 		<PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.31" />
 		<PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="3.1.31" />
