Updated Notifications and Layout for the scripts Notifcations

--- a/CMS/CMS.Web/appsettings.json
+++ b/CMS/CMS.Web/appsettings.json
@@ -9,5 +9,15 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "Defultconiction": "Data Source=DESKTOP-T10MFH0\\SQLSERVER;Initial Catalog=Hiring;Trusted_Connection=True;Integrated Security=True;"
-  }
+  },
+
+
+
+  //"SendGridSettings": {
+  //  "ApiKey": "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",
+  //  "SenderEmail": "mouosamoka15112001@gmail.com"
+  //}
+
+
+
 }
