--- a/CMS/CMS.Domain/CMS.Domain.csproj
+++ b/CMS/CMS.Domain/CMS.Domain.csproj
@@ -7,6 +7,7 @@
 	<ItemGroup>
 		<PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.31" />
 		<PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="3.1.31" />
+		<PackageReference Include="Microsoft.AspNetCore.SignalR" Version="1.1.0" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.31" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.31">
 			<PrivateAssets>all</PrivateAssets>
