--- a/CMS/CMS.Services/CMS.Services.csproj
+++ b/CMS/CMS.Services/CMS.Services.csproj
@@ -5,10 +5,12 @@
   </PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Microsoft.AspNetCore.SignalR" Version="1.1.0" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.31">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
+		<PackageReference Include="SendGrid" Version="9.28.1" />
 	</ItemGroup>
 
 	<ItemGroup>
