--- a/CMS/CMS.Domain/CMS.Domain.csproj
+++ b/CMS/CMS.Domain/CMS.Domain.csproj
@@ -4,6 +4,13 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Compile Remove="Migrations\20231002091202_CVnotrequiereddana.cs" />
+    <Compile Remove="Migrations\20231002091202_CVnotrequiereddana.Designer.cs" />
+    <Compile Remove="Migrations\20231003090242_CVnotReqdana.cs" />
+    <Compile Remove="Migrations\20231003090242_CVnotReqdana.Designer.cs" />
+  </ItemGroup>
+
 	<ItemGroup>
 		<PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.31" />
 		<PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="3.1.31" />
