UpdatedCandidateFilter, And the Edit for the interviews

--- a/CMS/CMS.Web/CMS.Web.csproj
+++ b/CMS/CMS.Web/CMS.Web.csproj
@@ -747,12 +747,15 @@
 
 	<ItemGroup>
 		<PackageReference Include="EPPlus" Version="6.2.9" />
+		<PackageReference Include="Habanero" Version="3.0.1" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.31" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.31">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="3.1.32" />
+		<PackageReference Include="Moq" Version="4.20.69" />
+		<PackageReference Include="MSTest.TestFramework" Version="3.1.1" />
 	</ItemGroup>
 
 	<ItemGroup>
