--- a/CMS/CMS.Web/appsettings.json
+++ b/CMS/CMS.Web/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Defultconiction": "Server=192.168.1.42;Database=CMS_Training;user Id=CMS_Training;password=P@ssw0rd;MultipleActiveResultSets=true"
+    "Defultconiction": "Server=.;Database=CMS1;Trusted_Connection= True;TrustServerCertificate=True;MultipleActiveResultSets=true;"
   }
 }
