--- a/CMS/CMS.Domain/CMS.Domain.csproj
+++ b/CMS/CMS.Domain/CMS.Domain.csproj
@@ -21,6 +21,8 @@
     <Compile Remove="Migrations\20231009141131_changedDatabaseServerToOld.Designer.cs" />
     <Compile Remove="Migrations\20231009185620_makePositionIdNullable.cs" />
     <Compile Remove="Migrations\20231009185620_makePositionIdNullable.Designer.cs" />
+    <Compile Remove="Migrations\20231011171047_ValidateDate.cs" />
+    <Compile Remove="Migrations\20231011171047_ValidateDate.Designer.cs" />
   </ItemGroup>
 
 	<ItemGroup>
