--- a/CMS/CMS.Web/CMS.Web.csproj
+++ b/CMS/CMS.Web/CMS.Web.csproj
@@ -763,4 +763,8 @@
 		<ProjectReference Include="..\CMS.Services\CMS.Services.csproj" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <Folder Include="wwwroot\attachments\" />
+	</ItemGroup>
+
 </Project>
