--- a/CMS/CMS.Domain/CMS.Domain.csproj
+++ b/CMS/CMS.Domain/CMS.Domain.csproj
@@ -25,6 +25,8 @@
     <Compile Remove="Migrations\20231012112333_removeNullableFromCvAttachmentInCandidate.Designer.cs" />
     <Compile Remove="Migrations\20231016103207_ActualExperienceNullable.cs" />
     <Compile Remove="Migrations\20231016103207_ActualExperienceNullable.Designer.cs" />
+    <Compile Remove="Migrations\20231017205811_fixed.cs" />
+    <Compile Remove="Migrations\20231017205811_fixed.Designer.cs" />
   </ItemGroup>
 
 	<ItemGroup>
