--- a/CMS/CMS.Services/CMS.Services.csproj
+++ b/CMS/CMS.Services/CMS.Services.csproj
@@ -5,6 +5,8 @@
   </PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Hangfire" Version="1.8.5" />
+		<PackageReference Include="Hangfire.Core" Version="1.8.5" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.31">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
